<resources>
    <string name="app_name">MposPicker</string>
    <string name="action_settings">Settings</string>
    <string name="some_error">Something went wrong</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->


    <string name="names">
        <item>Partially Filled</item>
        <item> Fully Filled</item>
        <item>Not Available</item>
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_invalid">Email or password cannot be empty</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
    <string name="title_home">Home</string>
    <string name="label_continue">continue</string>
    <string name="label_open_orders">open orders</string>
    <string name="label_select_fullfilment_to_start_pickup_process">Select fullfilment to start pickup process.</string>
    <string name="label_fullfillment_id">Fullfillment ID: </string>
    <string name="label_total_items">Total Items: </string>
    <string name="label_space">\u00A0</string>
    <string name="label_ready_for_pickup">Ready for pickup</string>
    <string name="label_pickup_process">pickup process</string>
    <string name="label_enter_batch_id">Enter Batch ID</string>

    <string name="turn_off_flashlight" translatable="false">FlashLight On</string>
    <string name="turn_on_flashlight" translatable="false">FlashLight Off</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_printer_disconnected_do_you_want_to_nre_connect_the_printer">Printer Disconnected! Do you want to \n Re-Connect the Printer</string>
    <string name="label_printer_devices">Printer devices</string>
    <string name="label_dashboard">dashboard</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_from">From</string>
    <string name="label_dd_mm_yyy">DD/MM/YYY</string>
    <string name="label_to">To</string>
    <string name="label_time_taken">Time Taken</string>
    <string name="label_45_44_45">45:44:45</string>
    <string name="label_today">Today</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="label_yearly">Yearly</string>
    <string name="label_full">Full</string>
    <string name="label_partial">Partial</string>
    <string name="label_not_available">Not Available</string>
    <string name="label_36">36</string>
    <string name="label_connect">Connect</string>
    <string name="label_select_alternate_printer_from_the_list">Select alternate printer from the list</string>
    <string name="label_total">Total</string>
    <string name="label_orders">Orders</string>
    <string name="shipping_method">Shipping method</string>
    <string name="home_delivery">Home delivery</string>
    <string name="payment_source">Payment source</string>
    <string name="online">Online</string>
    <string name="order_source">Order source</string>
    <string name="apollo247">Apollo247</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="_19_feb_2022_02_30_00">19 Feb, 2022 - 02:30:00</string>
    <string name="stock_status">Stock status</string>
    <string name="available">Available</string>
    <string name="order_type">Order type</string>
    <string name="cart">Cart</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="customer_type">Customer type</string>
    <string name="normal_priority">Normal Priority</string>
    <string name="order_date">order date</string>
    <string name="_19_feb_2022_10_35_44">19 Feb, 2022 - 10:35:44</string>
    <string name="select">Select</string>
    <string name="total_items_5">Total Items: 5</string>
    <string name="fullfillment_id">Fullfillment ID:</string>
    <string name="products">Products</string>
    <string name="qty">Qty</string>
    <string name="ascoril_d_plus_syrup_sugar_free">Ascoril D plus Syrup Sugar Free</string>
    <string name="rack_id">Rack ID</string>
    <string name="_1">1</string>
    <string name="batch_no">Batch No</string>
    <string name="qty1">Qty.</string>
    <string name="rack_id1">Rack ID:</string>
    <string name="g098_98_786">G098-98-786</string>
    <string name="packer">Packer</string>

    <string name="biller">Biller</string>

    <string name="sealer">Sealer</string>

    <string name="admin">Admin</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <string name="deciderScreen2">deciderScreen</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="open" />
    <string name="close" />
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>


</resources>
