<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/fullfillment_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen4dp"
        android:background="@drawable/square_stroke_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen7dp">

        <ImageView
            android:id="@+id/fullfillment_select_icon"
            android:layout_width="@dimen/dimen20dp"
            android:layout_height="@dimen/dimen20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_circle_stroke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/label_fullfillment_id"
                    android:textColor="#b6b4af"
                    android:textSize="@dimen/dimen12sp" />

                <TextView
                    android:id="@+id/fullfilment_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/label_total_items"
                    android:textColor="#b6b4af"
                    android:textSize="@dimen/dimen10sp" />

                <TextView
                    android:id="@+id/items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>